# OLM

./: README.md  pyproject.toml  requirements.txt
data/: sample_memories.jsonl  sample_sessions.jsonl
src/olm/: __init__.py  benchmarks.py  cli.py  components.py  evaluation.py  gating.py  memory.py  openai_client.py  operators.py  runner.py  runtime.py  store.py  types.py
src/olm/app/: cli.py
src/olm/core/: __init__.py  gating.py  licensing.py  lineage.py  memory.py  planning.py  retrieval.py  store.py  types.py
src/olm/evaluation/: __init__.py  benchmarks.py  metrics.py  runner.py
src/olm/operators/: __init__.py  components.py  pipeline.py  provider_client.py
src/olm/runtime/: __init__.py  activation.py  audit.py  closure.py  engine.py  session_ledger.py
tests/: test_smoke.py
