[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olm"
version = "0.1.0"
description = "Open-Loop Memory for reliable long-horizon language agents"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = []

[project.scripts]
olm = "olm.app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
